# m1sync2Airfocus

./: .gitignore  .ignore  LICENSE  README.md  constants.py.example  exceptions.py  main.py  pyproject.toml
api/: __init__.py  airfocus_client.py  azure_devops_client.py  jira_client.py  utils.py
config/: __init__.py
models/: __init__.py  airfocus_item.py  azure_devops.py  jira_item.py  utils.py
sync/: __init__.py  azure_sync.py  base.py  jira_sync.py
