[project]
name = "m1sync2airfocus"
version = "0.1.0"
description = "Sync JIRA Epics or Azure DevOps work items to Airfocus"
requires-python = ">=3.10"
dependencies = [
    "certifi==2025.10.5",
    "charset-normalizer==3.4.3",
    "colorama==0.4.6",
    "idna==3.10",
    "loguru==0.7.3",
    "requests==2.32.5",
    "urllib3==2.5.0",
    "win32_setctime==1.2.0",
]
